--- a/heuristiskenhed.html
+++ b/heuristiskenhed.html
@@ -2076,6 +2076,200 @@ of Lorem Ipsum.
         </div>
       </div>
     </div>
+    <!-- Modal tilfoej eksemplarer -->
+    <div
+      class="modal fade"
+      id="tilfoejeks"
+      tabindex="-1"
+      role="dialog"
+      aria-labelledby="tilfoejeksModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-xl" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title font-weight-bold" id="tilfoejeksModalLabel">
+              Tilføj Eksemplar
+            </h5>
+            <button
+              type="button"
+              class="btn close"
+              data-dismiss="modal"
+              aria-label="Close"
+            >
+              <span aria-hidden="true">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 12 16"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M7.48 8l3.75 3.75-1.48 1.48L6 9.48l-3.75 3.75-1.48-1.48L4.52 8 .77 4.25l1.48-1.48L6 6.52l3.75-3.75 1.48 1.48L7.48 8z"
+                  />
+                </svg>
+              </span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div class="card bg-light">
+              <div class="card-body">
+                <input
+                  type="text"
+                  class="form-control form-control-lg"
+                  placeholder="Søg..."
+                />
+              </div>
+            </div>
+            <div class="table-responsive">
+              <table
+                id=""
+                width="100%"
+                class="table sorting table-hover table-striped mb-0"
+              >
+                <thead>
+                  <tr>
+                    <th scope="col" class="d-flex align-items-center">
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </th>
+                    <th scope="col">Præfiks</th>
+                    <th scope="col">Arkivskaber</th>
+                    <th scope="col">HE-Navn</th>
+                    <th scope="col">HE-Fra</th>
+                    <th scope="col">HE-Til</th>
+                    <th scope="col">Eks. Type</th>
+                    <th scope="col">Eks. Navn</th>
+                    <th scope="col">Sort. felt.</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                  <tr class="clickable-checkbox">
+                    <td>
+                      <div
+                        class="form-check form-inline p-0 d-flex align-items-center mt-1"
+                      >
+                        <input
+                          class="form-check-input"
+                          type="checkbox"
+                          value=""
+                          id="defaultCheck1"
+                        />
+                      </div>
+                    </td>
+                    <td>FRB Politi</td>
+                    <td>Frederiksberg Politi</td>
+                    <td>Kredsaflytningssystem</td>
+                    <td>1988</td>
+                    <td>2020</td>
+                    <td>Papir</td>
+                    <td>Eksx2424</td>
+                    <td>sh29942</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary d-flex align-items-center"
+              data-dismiss="modal"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="12"
+                height="16"
+                viewBox="0 0 12 16"
+                class="mr-2"
+              >
+                <path
+                  fill="#fff"
+                  fill-rule="evenodd"
+                  d="M12 9H7v5H5V9H0V7h5V2h2v5h5v2z"
+                />
+              </svg>
+              <span>Tilføj</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
